# AIPlaysJackBox

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: release.yaml
ai_plays_jackbox/: ai_prompter.py  cli.py  room.py  run.py
ai_plays_jackbox/bot/: __init__.py  bot_base.py  bot_factory.py  bot_personality.py
ai_plays_jackbox/bot/jackbox5/: bot_base.py  patently_stupid.py
ai_plays_jackbox/bot/jackbox6/: dictionarium.py
ai_plays_jackbox/bot/jackbox7/: bot_base.py  quiplash3.py
ai_plays_jackbox/bot/jackbox8/: job_job.py
ai_plays_jackbox/llm/: __init__.py  chat_model.py  chat_model_factory.py  gemini_model.py  gemini_vertex_ai.py  ollama_model.py  openai_model.py
ai_plays_jackbox/ui/: create_ui.py  main.py
scripts/: lint.ps1  lint.py
